--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -186,16 +186,16 @@ es-CR:
       carrierwave_processing_error: "No se pudo cambiarle el tamaño a la imagen."
       carrierwave_integrity_error: "No es una imagen."
       carrierwave_download_error: "No se pudo descargar la imagen."
-      extension_blacklist_error: "No puede subir archivos de tipo %{extension}, tipos prohibidos: %{prohibited_types}"
-      extension_white_list_error: "no puede subir archivos de tipo %{extension}, tipos permitidos: %{allowed_types}"
-      file_size_is_in: ! 'el tamaño del archivo debe estar entre %{min} y %{max}'
-      file_size_is_less_than: ! 'el tamaño del archivo debe ser menor a %{count}'
-      file_size_is_less_than_or_equal_to: ! 'el tamaño del archivo debe ser menor o igual a %{count}'
-      file_size_is_greater_than: ! 'el tamaño del archivo debe ser mayor a %{count}'
-      file_size_is_greater_than_or_equal_to: ! 'el tamaño del archivo debe ser mayor o igual a %{count}'
-      spoofed_file_media_type: la extensión del archivo no concide con su contenido
-      allowed_file_content_types: ! 'el archivo debe ser de los siguientes tipos: %{types}'
-      excluded_file_content_types: ! 'el archivo no puede ser de tipo %{types}'
+      extension_blacklist_error: "No puede ser de tipo %{extension}, tipos prohibidos: %{prohibited_types}"
+      extension_white_list_error: "no puede ser de tipo %{extension}, tipos permitidos: %{allowed_types}"
+      file_size_is_in: ! 'el tamaño debe estar entre %{min} y %{max}'
+      file_size_is_less_than: ! 'el tamaño debe ser menor a %{count}'
+      file_size_is_less_than_or_equal_to: ! 'el tamaño debe ser menor o igual a %{count}'
+      file_size_is_greater_than: ! 'el tamaño debe ser mayor a %{count}'
+      file_size_is_greater_than_or_equal_to: ! 'el tamaño debe ser mayor o igual a %{count}'
+      spoofed_file_media_type: la extensión no concide con su contenido
+      allowed_file_content_types: ! 'debe ser de los siguientes tipos: %{types}'
+      excluded_file_content_types: ! 'no puede ser de tipo %{types}'
 
   # Plurización errores
   form_has_x_errors:
